[package]
name = "helix-vcs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
helix-core = { path = "../helix-core" }
helix-event = { path = "../helix-event" }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "parking_lot", "macros"] }
parking_lot.workspace = true
arc-swap.workspace = true

gix = { version = "0.84.0", features = ["attributes", "status", "max-performance", "sha1"], default-features = false, optional = true }
imara-diff =  "0.2.0"
anyhow = "1"

log = "0.4"
subversion = { version = "0.1.10", optional = true }

[features]
git = ["gix"]
svn = ["subversion"]

[dev-dependencies]
tempfile.workspace = true
